--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -29,9 +29,10 @@ body {
 }
 
 .main {
-	background-color: rgba(255, 255, 255, 0.8);
-	margin-bottom: 15px;
-	border-radius: 15px;
+    background-image: url("/assets/img/church.jpg");
+    background-size: cover;
+    background-position: center;
+    min-height: 100vh;
 }
 
 .example-8 {
@@ -44,9 +45,9 @@ body {
   width: 200px;
 }
 
-.navbar-inverse .navbar-nav>li>a:hover{
-	color: black;
-}
+/*.navbar-inverse .navbar-nav>li>a:hover{*/
+/*	color: black;*/
+/*}*/
 
 div{
 	opacity: 0.98;
