--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Chez Jerome</title>
+	<title>Anafora</title>
 	<!-- Bootstrap CSS -->
 <!--	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
@@ -32,9 +32,9 @@
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="/">Home</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/guest">Guest Login</a>
-                    </li>
+<!--                    <li class="nav-item">-->
+<!--                        <a class="nav-link active" aria-current="page" href="/guest">Guest Login</a>-->
+<!--                    </li>-->
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="/room/book">Book Room</a>
                     </li>
@@ -43,31 +43,8 @@
                     </li>
                 </ul>
             </div>
-
-<!--	      <div class="navbar-header">-->
-<!--	        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar8">-->
-<!--	          <span class="sr-only">Toggle navigation</span>-->
-<!--	          <span class="icon-bar"></span>-->
-<!--	          <span class="icon-bar"></span>-->
-<!--	          <span class="icon-bar"></span>-->
-<!--	        </button>-->
-<!--	        <a class="navbar-brand text-hide" href="/">Chez Jerome-->
-<!--	        </a>-->
-<!--	      </div>-->
-<!--	      <div id="navbar8" class="navbar-collapse collapse">-->
-<!--	        <ul class="nav navbar-nav navbar-right">-->
-<!--	          <li><a href="/">Home</a></li> &lt;!&ndash; class="active" &ndash;&gt;-->
-<!--	          <li><a href="/guest">Guest Login</a></li>-->
-<!--	          <li><a href="/room/book">Book Room</a></li>-->
-<!--	          <li><a href="/tables">Restaurant</a></li>-->
-<!--&lt;!&ndash;	          <li><a href="/yelp">Activities</a></li>&ndash;&gt;-->
-<!--	        </ul>-->
-<!--	      </div>-->
-	      <!--/.nav-collapse -->
-	    </div>
-	    <!--/.container-fluid -->
-	  </nav>	  
-		  <!-- <img src="/assets/img/LOGOfinal.png" alt="Chez Jerome"> -->
+        </div>
+	  </nav>
   <div class="container-fluid main">
 		{{{ body }}}
   </div>
